# speed-test-vpn

./: .gitignore  README.md  config.py  db_run.py  initbot.py  logger.py  pyproject.toml  speedtest.db  speedtest.db.blank  update_db.py
db/: main.py
handlers/: __init__.py  keyboard.py  other.py
main/: main.py
modules/: __init__.py  reports.py  schedules.py  speed_test.py  speedtest_integration.py  test_integration.py
