[tool.poetry]
name = "speed-test-vpn"
version = "0.1.0"
description = "Измерение скорости серверов Outline VPN - AXO"
authors = ["Alex-AXO <97378201+Alex-AXO@users.noreply.github.com>"]
readme = "README.md"
homepage = "http://samopoznanie.ru/axo"
repository = "https://github.com/Alex-AXO/vpn-speed-test"
keywords = ["vpn", "chatbot", "speed", "outline", "test", "speedtest"]
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"
aiogram = "^2"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.1"
aiosqlite = "^0.19.0"
#gspread = "^5.9.0"
speedtest-cli = "^2.1.3"
setuptools = "^68.1.2"
aiohttp = ">=3.8.0,<3.9.0"
asyncssh = "^2.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
speed-test = "main.main:main"
update-db = "update_db.py:main"
